[package]
name = "ultralight-rs"
version = "0.1.0"
authors = ["Guillaume Anthouard <guillaume.anthouard@hotmail.fr>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md", "build.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["ultralight-sys"]

[dependencies]
ultralight-sys = { path = "ultralight-sys" }
anyhow = "1.0"
log = "0.4"

[dev-dependencies]
simple_logger = "1"
